src/objects/MUSW__Proceeding__c.object
<CustomObject>
    <fields>
        <fullName>MUSW__Adjourn_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Adjourn Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Authority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>eg. Commission, Board</description>
        <label>Authority</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Proceedings Presided Over</relationshipLabel>
        <relationshipName>Proceedings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coutroom #1</fullName>
                </value>
                <value>
                    <fullName>Coutroom #2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Start_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MUSW__Title__c</fullName>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning &amp; Zoning Hearing</fullName>
                    <default>true</default>
                    <label>Planning &amp; Zoning Hearing</label>
                </value>
                <value>
                    <fullName>City Code Enforcement Hearing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hearing</fullName>
                    <default>true</default>
                    <label>Hearing</label>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Proceeding</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proceedings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>